Fixed alignment to end of the screen

--- a/src/app/components/hris/employees/employee-profile/accordions/accordion-career-summary/accordion-career-work-experience/accordion-career-work-experience.component.css
+++ b/src/app/components/hris/employees/employee-profile/accordions/accordion-career-summary/accordion-career-work-experience/accordion-career-work-experience.component.css
@@ -45,8 +45,8 @@ mat-icon{
     align-items: center;
 }
 
-#experience-remove {
-    margin-left: 720px;
+#experience-remove-new {
+    justify-content: end;
 }
 
 .icon-color{
